# OGL_SDL

./: CMakeLists.txt  CMakeSettings.json  README.md
src/: OGL_SDL.cpp  OGL_SDL.h  main.cpp
src/core/: common_include.h  singleton.h
src/shaders/: frag.glsl  vert.glsl
src/systems/: log.h  system.h
